--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <table cellspacing="20" >
   <tr>
     <td><img src="images-modified.png" alt="error?">
-    </td><h1> SHIVA</h1><td>
+    </td><td><h1> SHIVA</h1>
     <p><em>founder of <strong><a href="https://www.tenniscricket.in/">tennis cricket</a></strong></em></p>
      <p>hey i am a professional cricketer playing for the home and the national team</p> 
   </td>
